force-app/main/default/objects/Contract/fields/Candidate_Signed__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Signed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Candidate Signed</label>
    <type>Checkbox</type>
</CustomField>