force-app/main/default/objects/Contract/fields/Deadline__c.field-meta.xml
<CustomField>
    <fullName>Deadline__c</fullName>
    <label>Deadline</label>
    <type>DateTime</type>
</CustomField>